--- a/app/src/main/res/layout/activity_simple_get.xml
+++ b/app/src/main/res/layout/activity_simple_get.xml
@@ -4,43 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="com.jogazo.network.SimpleGet">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="513dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="-2dp">
 
         <TextView
             android:id="@+id/get_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter a valid HTTP URL and then press GET to retrieve data"
+            android:text="Expected argument `theurl`:"
+            android:textColor="@android:color/holo_green_light"
             tools:layout_editor_absoluteX="3dp"
             tools:layout_editor_absoluteY="7dp" />
 
-
-        <EditText
-            android:id="@+id/get_input"
-            android:layout_width="364dp"
-            android:layout_height="40dp"
-            android:text="http://ipv4.download.thinkbroadband.com/5MB.zip"
+        <TextView
+            android:id="@+id/get_output"
+            android:layout_width="372dp"
+            android:layout_height="51dp"
+            android:textColor="@android:color/holo_green_light"
             tools:layout_editor_absoluteX="3dp"
             tools:layout_editor_absoluteY="39dp" />
-
-
-        <Button
-            android:id="@+id/get_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="GET"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="152dp" />
-
-
-        <TextView android:id="@+id/get_output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
